clusters/my-cluster/podinfo/rate-limited-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-rate-limited-ingress
  namespace: default
  annotations:
    konghq.com/protocol: "http"
    konghq.com/plugins: "podinfo-ratelimit"
    konghq.com/rewrite: "/version"
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /podinfo/version
        pathType: Exact
        backend:
          service:
            name: podinfo
            port:
              number: 9898
